evclid_upload_Mobile_Friendly

--- a/index.html
+++ b/index.html
@@ -357,10 +357,10 @@
             Оставить заявку
           </h2>
           <form action="https://jsonplaceholder.typicode.com/posts" method="POST" class="wrap-center__form">
-            <input class="wrap-center__form-input" placeholder="Фамилия, имя и отчество*" type="text" name="name" required>
+            <input class="wrap-center__form-input" placeholder="Фамилия, имя и отчество*" type="text" name="name"
+              required>
             <input class="wrap-center__form-input" placeholder="E-mail*" type="text" name="email" required>
-            <textarea name="textarea" class="wrap-center__form-textarea" id="1"
-              placeholder="Сообщение"></textarea>
+            <textarea name="textarea" class="wrap-center__form-textarea" id="1" placeholder="Сообщение"></textarea>
             <div class="wrap-center__btn-wrap">
               <button class="wrap-center__form-btn">
                 Отправить данные
