--- a/index.html
+++ b/index.html
@@ -13,6 +13,11 @@
 <body>
   <header class="header">
     <div class="container header-container">
+      <button class="burger">
+        <span class="burger__line"></span>
+        <span class="burger__line"></span>
+        <span class="burger__line"></span>
+    </button>
       <a href="#" class="header__logo">
         <img src="./img/Logo.svg" alt="Логотип">
       </a>
