--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="css/normalize.css">
   <link rel="stylesheet" href="css/style.css">
+  <link rel="stylesheet" href="./css/swiper-min.css">
+  <script src="./js/swiper.js"></script>
   <script src="./js/tabs.js"></script>
   <title>Евклид - проектные решения</title>
 </head>
@@ -14,7 +16,7 @@
 <body>
   <header class="header">
     <div class="container header-container">
-      <button class="burger">
+      <button class="burger" id="burger">
         <span class="burger__line"></span>
         <span class="burger__line"></span>
         <span class="burger__line"></span>
@@ -24,7 +26,8 @@
       </a>
       <div class="header__nav-wrap">
         <nav class="nav header__nav">
-          <ul class="header__nav-list">
+          <ul class="header__nav-list" id="menu">
+            <button class="header__nav-btn-close" id="close"></button>
             <li class="header__nav-item">
               <a href="#" class="header__nav-link">
                 О нас
@@ -58,7 +61,9 @@
             <circle cx="11.5" cy="11.5" r="10.5" stroke="#333333" stroke-width="2" />
           </svg>
         </button>
+
       </div>
+
     </div>
   </header>
 
@@ -74,11 +79,15 @@
         <button class="btn section-hero__btn">
           Заказать расчёт
         </button>
-        <div class="section-hero__dot-wrap">
-          <div class="section-hero__dot-active"></div>
-          <div class="section-hero__dot"></div>
-          <div class="section-hero__dot"></div>
+      </div>
+      <div class="swiper-container">
+        <div class="swiper-wrapper">
+          <div class="swiper-slide" style="background-image: url(img/slide_1.jpg);"></div>
+          <div class="swiper-slide" style="background-image: url(img/slide_2.jpg);"></div>
+          <div class="swiper-slide" style="background-image: url(img/slide_3.jpg);"></div>
         </div>
+        <div class="swiper-pagination"></div>
+
       </div>
     </div>
   </section>
@@ -167,7 +176,7 @@
           </button>
         </li>
       </ul>
-
+      <!-- 1 таб -->
       <div class="how-work__content-wrap tab-active" data-target="one">
         <div class="how-work__content-left">
           <div class="how-work__content-left-heading">
@@ -196,8 +205,7 @@
           <img class="how-work__content-right-pic" src="./img/work_pic_1.jpg" alt="Слайд 1">
         </div>
       </div>
-
-
+      <!-- 2 таб -->
       <div class="how-work__content-wrap" data-target="two">
         <div class="how-work__content-left">
           <div class="how-work__content-left-heading">
@@ -224,7 +232,7 @@
           <img class="how-work__content-right-pic" src="./img/work_pic_2.jpg" alt="Слайд 2">
         </div>
       </div>
-
+      <!-- 3 таб  -->
       <div class="how-work__content-wrap" data-target="three">
         <div class="how-work__content-left">
           <div class="how-work__content-left-heading">
@@ -246,14 +254,13 @@
             <div class="how-work__content-left-btn-2">
               Договор
             </div>
-
           </div>
         </div>
         <div class="how-work__content-right">
           <img class="how-work__content-right-pic" src="./img/work_pic_3.jpg" alt="Слайд 3">
         </div>
       </div>
-
+      <!-- 4 таб -->
       <div class="how-work__content-wrap" data-target="four">
         <div class="how-work__content-left">
           <div class="how-work__content-left-heading">
@@ -473,7 +480,10 @@
         </div>
       </div>
     </div>
+
   </footer>
+
+  <script src="./js/index.js"></script>
 </body>
 
 </html>
