--- a/index.html
+++ b/index.html
@@ -192,12 +192,12 @@
             чрезвычайно интересные особенности картины в целом, однако конкретные выводы, разумеется, призваны к ответу.
           </div>
           <div class="how-work__content-left-btn-wrap">
-            <div class="how-work__content-left-btn-1">
+            <button class="how-work__content-left-btn-1">
               Подробнее
-            </div>
-            <div class="how-work__content-left-btn-2">
+            </button>
+            <button class="how-work__content-left-btn-2">
               Договор
-            </div>
+            </button>
 
           </div>
         </div>
@@ -297,78 +297,107 @@
       </h2>
       <ul class="often-question__list">
         <li class="often-question__item">
-          <a class="often-question__item-link" href="#">
-            <h3 class="often-question__item-heading">
+          <a class="often-question__item-link" id="accordion_1">
+            <h3 class="often-question__item-heading label">
               Из чего формируется конечная стоимость проекта?
             </h3>
-            <div class="often-question__item-ellipse">
-              <svg class="often-question__item-ellipse-pic" viewBox="0 0 31 31" fill="none"
+            <button class="often-question__item-ellipse" id="accordion_1_btn">
+              <svg class="often-question__item-ellipse-pic" id="accordion_1_svg" viewBox="0 0 31 31" fill="none"
                 xmlns="http://www.w3.org/2000/svg">
                 <path fill-rule="evenodd" clip-rule="evenodd"
                   d="M15.0571 15.0571L15.0571 -1.31634e-06L15.9429 -1.31634e-06L15.9429 15.0571L23.8835 15.0571L31 15.0571L31 15.9429L15.9429 15.9429L15.9429 31L15.0571 31L15.0571 15.9429L2.42093e-06 15.9429L2.49836e-06 15.0571L15.0571 15.0571Z" />
               </svg>
-            </div>
+            </button>
           </a>
+          <div class="often-question__content-wrap" id="content_1">
+            <p class="often-question__content-wrap-text">Являясь всего лишь частью общей картины, непосредственные
+              участники технического прогресса призывают нас к новым свершениям, которые, в свою очередь, должны быть
+              своевременно верифицированы. Но высококачественный прототип будущего проекта является качественно новой
+              ступенью первоочередных требований. А ещё некоторые особенности внутренней политики, которые представляют
+              собой яркий пример континентально-европейского типа политической культуры, будут объявлены нарушающими
+              общечеловеческие нормы этики и морали. И нет сомнений, что явные признаки победы институционализации
+              призывают нас к новым свершениям, которые, в свою очередь, должны быть указаны как претенденты на роль
+              ключевых факторов.</p>
+            <p class="often-question__content-wrap-text">Приятно, граждане, наблюдать, как некоторые особенности
+              внутренней политики могут быть призваны к ответу.
+              Явные признаки победы институционализации набирают популярность среди определенных слоев населения, а
+              значит, должны быть объединены в целые кластеры себе подобных. Банальные, но неопровержимые выводы, а
+              также многие известные личности призывают нас к новым свершениям, которые, в свою очередь, должны быть
+              представлены в исключительно положительном свете.</p>
+          </div>
         </li>
 
+
         <li class="often-question__item">
-          <a class="often-question__item-link" href="#">
-            <h3 class="often-question__item-heading">
+          <a class="often-question__item-link" id="accordion_2">
+            <h3 class="often-question__item-heading label">
               У меня есть свой проект. Сможем ли мы его доработать / реализовать?
             </h3>
-            <div class="often-question__item-ellipse">
-              <svg class="often-question__item-ellipse-pic" viewBox="0 0 31 31" fill="none"
+            <button class="often-question__item-ellipse" id="accordion_2_btn">
+              <svg class="often-question__item-ellipse-pic" id="accordion_2_svg" viewBox="0 0 31 31" fill="none"
                 xmlns="http://www.w3.org/2000/svg">
                 <path fill-rule="evenodd" clip-rule="evenodd"
                   d="M15.0571 15.0571L15.0571 -1.31634e-06L15.9429 -1.31634e-06L15.9429 15.0571L23.8835 15.0571L31 15.0571L31 15.9429L15.9429 15.9429L15.9429 31L15.0571 31L15.0571 15.9429L2.42093e-06 15.9429L2.49836e-06 15.0571L15.0571 15.0571Z" />
               </svg>
-            </div>
+            </button>
           </a>
+          <div class="often-question__content-wrap" id="content_2">
+            <p class="often-question__content-wrap-text">Текст 2.</p>
+          </div>
         </li>
 
         <li class="often-question__item">
-          <a class="often-question__item-link" href="#">
-            <h3 class="often-question__item-heading">
+          <a class="often-question__item-link" id="accordion_3">
+            <h3 class="often-question__item-heading label">
               Я выбираю между разными компаниями. В чём ваше отличие?
             </h3>
-            <div class="often-question__item-ellipse">
-              <svg class="often-question__item-ellipse-pic" viewBox="0 0 31 31" fill="none"
+            <button class="often-question__item-ellipse" id="accordion_3_btn">
+              <svg class="often-question__item-ellipse-pic" id="accordion_3_svg" viewBox="0 0 31 31" fill="none"
                 xmlns="http://www.w3.org/2000/svg">
                 <path fill-rule="evenodd" clip-rule="evenodd"
                   d="M15.0571 15.0571L15.0571 -1.31634e-06L15.9429 -1.31634e-06L15.9429 15.0571L23.8835 15.0571L31 15.0571L31 15.9429L15.9429 15.9429L15.9429 31L15.0571 31L15.0571 15.9429L2.42093e-06 15.9429L2.49836e-06 15.0571L15.0571 15.0571Z" />
               </svg>
-            </div>
+            </button>
           </a>
+          <div class="often-question__content-wrap" id="content_3">
+            <p class="often-question__content-wrap-text">Текст 3.</p>
+          </div>
         </li>
 
         <li class="often-question__item">
-          <a class="often-question__item-link" href="#">
+          <a class="often-question__item-link" id="accordion_4">
             <h3 class="often-question__item-heading">
               Могу ли я делегировать вам работу / согласование с подрядчиком / организацией?
             </h3>
-            <div class="often-question__item-ellipse">
-              <svg class="often-question__item-ellipse-pic" viewBox="0 0 31 31" fill="none"
+            <button class="often-question__item-ellipse" id="accordion_4_btn">
+              <svg class="often-question__item-ellipse-pic" id="accordion_4_svg" viewBox="0 0 31 31" fill="none"
                 xmlns="http://www.w3.org/2000/svg">
                 <path fill-rule="evenodd" clip-rule="evenodd"
                   d="M15.0571 15.0571L15.0571 -1.31634e-06L15.9429 -1.31634e-06L15.9429 15.0571L23.8835 15.0571L31 15.0571L31 15.9429L15.9429 15.9429L15.9429 31L15.0571 31L15.0571 15.9429L2.42093e-06 15.9429L2.49836e-06 15.0571L15.0571 15.0571Z" />
               </svg>
-            </div>
+            </button>
           </a>
+          <div class="often-question__content-wrap" id="content_4">
+            <p class="often-question__content-wrap-text">Текст 4.</p>
+          </div>
         </li>
 
         <li class="often-question__item">
-          <a class="often-question__item-link" href="#">
+          <a class="often-question__item-link" id="accordion_5">
             <h3 class="often-question__item-heading">
               Могу ли я вернуть деньги на каком-либо из этапов работ?
             </h3>
-            <div class="often-question__item-ellipse">
-              <svg class="often-question__item-ellipse-pic" viewBox="0 0 31 31" fill="none"
+            <button class="often-question__item-ellipse" id="accordion_5_btn">
+              <svg class="often-question__item-ellipse-pic" id="accordion_5_svg" viewBox="0 0 31 31" fill="none"
                 xmlns="http://www.w3.org/2000/svg">
                 <path fill-rule="evenodd" clip-rule="evenodd"
                   d="M15.0571 15.0571L15.0571 -1.31634e-06L15.9429 -1.31634e-06L15.9429 15.0571L23.8835 15.0571L31 15.0571L31 15.9429L15.9429 15.9429L15.9429 31L15.0571 31L15.0571 15.9429L2.42093e-06 15.9429L2.49836e-06 15.0571L15.0571 15.0571Z" />
               </svg>
-            </div>
+            </button>
           </a>
+          <div class="often-question__content-wrap" id="content_5">
+            <p class="often-question__content-wrap-text">Текст 5.</p>
+          </div>
         </li>
       </ul>
     </div>
@@ -417,24 +446,29 @@
             </li>
           </ul>
           <div class="wrap-left__social">
-            <svg class="wrap-left__social-ico" viewBox="0 0 60 60" fill="none" xmlns="http://www.w3.org/2000/svg">
-              <a href="#" class="social-ico-link">
+            <a href="#" class="social-ico-link">
+              <svg class="wrap-left__social-ico" viewBox="0 0 60 60" fill="none" xmlns="http://www.w3.org/2000/svg">
+
                 <path
                   d="M30 0C13.5 0 0 13.5241 0 30.1807C0 45.241 10.98 57.741 25.32 60V38.9157H17.7V30.1807H25.32V23.5241C25.32 15.9639 29.79 11.8072 36.66 11.8072C39.93 11.8072 43.3499 12.3795 43.3499 12.3795V19.8193H39.5699C35.85 19.8193 34.68 22.1386 34.68 24.5181V30.1807H43.0199L41.6699 38.9157H34.68V60C41.7493 58.8791 48.1866 55.2576 52.8297 49.7893C57.4729 44.3211 60.016 37.3664 59.9999 30.1807C59.9999 13.5241 46.4999 0 30 0Z"
                   fill="#7C7C7C" />
-              </a>
-            </svg>
 
-            <svg class="wrap-left__social-ico" viewBox="0 0 60 60" fill="none" xmlns="http://www.w3.org/2000/svg">
-              <a href="#" class="social-ico-link">
+              </svg>
+            </a>
+
+            <a href="#" class="social-ico-link">
+              <svg class="wrap-left__social-ico" viewBox="0 0 60 60" fill="none" xmlns="http://www.w3.org/2000/svg">
+
                 <path
                   d="M30 0C13.432 0 0 13.4314 0 30C0 46.5686 13.432 60 30 60C46.568 60 60 46.5686 60 30C60 13.4314 46.568 0 30 0ZM45.2176 33.2446C46.6159 34.6103 48.0951 35.8957 49.3504 37.4026C49.9065 38.0692 50.4307 38.7585 50.8297 39.5337C51.3993 40.6392 50.8849 41.8515 49.8954 41.9171L43.7494 41.9159C42.162 42.0473 40.8988 41.4071 39.8339 40.3218C38.9837 39.457 38.195 38.5332 37.3762 37.6389C37.0416 37.2718 36.6893 36.9262 36.2695 36.6543C35.4316 36.1093 34.7036 36.2762 34.2236 37.1515C33.7344 38.0421 33.6227 39.0292 33.5761 40.0205C33.5092 41.4697 33.0721 41.8484 31.618 41.9165C28.5109 42.062 25.5628 41.5906 22.8227 40.0241C20.4055 38.6425 18.5346 36.6924 16.9043 34.4845C13.7297 30.1805 11.2984 25.4566 9.11386 20.597C8.6222 19.5026 8.98189 18.917 10.1893 18.8943C12.1952 18.8557 14.2011 18.8606 16.2071 18.8925C17.0234 18.9054 17.5636 19.3725 17.8772 20.1428C18.9612 22.8098 20.2901 25.3473 21.9554 27.7007C22.3992 28.3274 22.8522 28.9522 23.4973 29.3948C24.2093 29.8834 24.7519 29.7219 25.0877 28.9271C25.3025 28.4219 25.3952 27.8817 25.4418 27.3404C25.6014 25.486 25.6205 23.6323 25.3442 21.7854C25.1724 20.6296 24.5224 19.8832 23.3702 19.6647C22.7834 19.5536 22.8694 19.3363 23.1548 19.0011C23.6501 18.4217 24.1142 18.0632 25.0416 18.0632L31.9857 18.062C33.0801 18.2768 33.3256 18.7679 33.4742 19.8703L33.4803 27.5871C33.4674 28.0137 33.6945 29.2782 34.4606 29.5574C35.0744 29.76 35.4795 29.2677 35.8465 28.8792C37.5118 27.112 38.6983 25.0263 39.7608 22.8675C40.2298 21.9155 40.6343 20.9303 41.0271 19.9433C41.3193 19.2135 41.7735 18.8544 42.5972 18.8667L49.2841 18.8747C49.4811 18.8747 49.6812 18.8765 49.8764 18.9103C51.0034 19.103 51.3121 19.5879 50.9635 20.6873C50.4147 22.4145 49.3485 23.8533 48.3063 25.2958C47.1892 26.8401 45.9977 28.3304 44.8917 29.8815C43.8752 31.2994 43.9556 32.0133 45.2176 33.2446Z"
                   fill="#7C7C7C" />
-              </a>
-            </svg>
 
-            <svg class="wrap-left__social-ico" viewBox="0 0 60 60" fill="none" xmlns="http://www.w3.org/2000/svg">
-              <a href="#" class="social-ico-link">
+              </svg>
+            </a>
+
+            <a href="#" class="social-ico-link">
+              <svg class="wrap-left__social-ico" viewBox="0 0 60 60" fill="none" xmlns="http://www.w3.org/2000/svg">
+
                 <path
                   d="M24.2578 30C24.2578 33.1714 26.8286 35.7422 30 35.7422C33.1714 35.7422 35.7422 33.1714 35.7422 30C35.7422 26.8286 33.1714 24.2578 30 24.2578C26.8286 24.2578 24.2578 26.8286 24.2578 30Z"
                   fill="#7C7C7C" />
@@ -444,8 +478,9 @@
                 <path
                   d="M30 0C46.566 0 60 13.434 60 30C60 46.566 46.566 60 30 60C13.434 60 0 46.566 0 30C0 13.434 13.434 0 30 0ZM12.8773 37.1022C12.9607 38.936 13.2523 40.188 13.678 41.2839C14.5729 43.5979 16.4021 45.4271 18.7161 46.322C19.8116 46.7477 21.064 47.0389 22.8973 47.1227C24.7343 47.2064 25.3212 47.2266 29.9995 47.2266C34.6783 47.2266 35.2647 47.2064 37.1022 47.1227C38.9355 47.0389 40.188 46.7477 41.2834 46.322C42.4333 45.8894 43.4743 45.2115 44.3349 44.3349C45.211 43.4747 45.889 42.4333 46.3216 41.2839C46.7473 40.1884 47.0389 38.936 47.1222 37.1027C47.2069 35.2652 47.2266 34.6783 47.2266 30C47.2266 25.3217 47.2069 24.7348 47.1227 22.8978C47.0393 21.064 46.7482 19.812 46.3225 18.7161C45.8899 17.5667 45.2115 16.5253 44.3349 15.6651C43.4747 14.7885 42.4333 14.1106 41.2839 13.678C40.188 13.2523 38.936 12.9611 37.1022 12.8773C35.2652 12.7936 34.6783 12.7734 30 12.7734C25.3217 12.7734 24.7348 12.7936 22.8978 12.8778C21.064 12.9611 19.812 13.2523 18.7161 13.6775C17.5667 14.1101 16.5253 14.7885 15.6647 15.6651C14.7885 16.5257 14.1101 17.5667 13.678 18.7161C13.2518 19.812 12.9607 21.064 12.8769 22.8978C12.7931 24.7348 12.7734 25.3217 12.7734 30C12.7734 34.6783 12.7931 35.2652 12.8773 37.1022Z"
                   fill="#7C7C7C" />
-              </a>
-            </svg>
+
+              </svg>
+            </a>
           </div>
         </div>
 
@@ -463,7 +498,7 @@
                 Отправить данные
               </button>
               <label class="wrap-center__form-btn-check">
-                <input type="checkbox" required>
+                <input type="checkbox" class="btn-check_focus" required>
                 <a class="wrap-center__form-btn-check-link" href="#">Согласен на обработку данных</a>
               </label>
             </div>
