Aria_Label_Ready

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <link rel="stylesheet" href="./css/swiper-min.css">
   <script src="./js/swiper.js"></script>
   <script src="./js/tabs.js"></script>
-  <title>Евклид - проектные решения</title>
+  <title>Евклид - проектные системы</title>
 </head>
 
 <body>
@@ -22,7 +22,7 @@
         <span class="burger__line"></span>
       </button>
       <a href="#" class="header__logo">
-        <img src="./img/Logo.svg" alt="Логотип">
+        <img src="./img/Logo.svg" alt="Логотип" aria-label="Логотип компании Эвклид - проектные решения">
       </a>
       <div class="header__nav-wrap">
         <nav class="nav header__nav">
@@ -55,7 +55,7 @@
             </li>
           </ul>
         </nav>
-        <button class="btn header__btn">
+        <button class="btn header__btn" aria-label="Поиск по сайту">
           <svg width="26" height="26" viewBox="0 0 26 26" fill="none" xmlns="http://www.w3.org/2000/svg">
             <rect x="19.5138" y="18.5495" width="8" height="2" transform="rotate(45 19.5138 18.5495)" fill="#333333" />
             <circle cx="11.5" cy="11.5" r="10.5" stroke="#333333" stroke-width="2" />
@@ -70,13 +70,13 @@
   <section class="section-hero">
     <div class="container section-hero__container">
       <div class="section-hero__wrap">
-        <h1 class="section-hero__heading">
+        <h1 class="section-hero__heading" aria-label="Основной заголвок">
           Проектные решения любой сложности
         </h1>
         <p class="section-hero__text">
           Есть над чем задуматься: базовые сценарии поведения пользователей и по сей день остаются уделом проектантов
         </p>
-        <button class="btn section-hero__btn">
+        <button class="btn section-hero__btn" aria-label="Заказать расчет">
           Заказать расчёт
         </button>
       </div>
@@ -114,7 +114,7 @@
               Принимая во внимание показатели успешности, перспективное планирование способствует<br> подготовке и
               реализации новых принципов.
             </p>
-            <button class="btn section-about__button">
+            <button class="btn section-about__button" aria-label="Статья - Показатели успешности. Изучить статью подробнее">
               Подробнее
             </button>
           </div>
@@ -156,22 +156,22 @@
       </h2>
       <ul class="how-work__list">
         <li class="how-work__item">
-          <button class="btn how-work__btn tab-btn-active" data-default="one" data-path="one">
+          <button class="btn how-work__btn tab-btn-active" data-default="one" data-path="one" aria-label="Раздел как мы работаем, первый шаг">
             1 шаг
           </button>
         </li>
         <li class="how-work__item">
-          <button class="btn how-work__btn" data-default="two" data-path="two">
+          <button class="btn how-work__btn" data-default="two" data-path="two" aria-label="Раздел как мы работаем, второй шаг">
             2 шаг
           </button>
         </li>
         <li class="how-work__item">
-          <button class="btn how-work__btn" data-default="three" data-path="three">
+          <button class="btn how-work__btn" data-default="three" data-path="three" aria-label="Раздел как мы работаем, третий шаг">
             3 шаг
           </button>
         </li>
         <li class="how-work__item">
-          <button class="btn how-work__btn" data-default="four" data-path="four">
+          <button class="btn how-work__btn" data-default="four" data-path="four" aria-label="Раздел как мы работаем, четвертый шаг">
             4 шаг
           </button>
         </li>
@@ -192,11 +192,11 @@
             чрезвычайно интересные особенности картины в целом, однако конкретные выводы, разумеется, призваны к ответу.
           </div>
           <div class="how-work__content-left-btn-wrap">
-            <button class="how-work__content-left-btn-1">
+            <button class="how-work__content-left-btn-1" aria-label="Статья - Проводим консультацию, изучить подробнее">
               Подробнее
             </button>
-            <button class="how-work__content-left-btn-2">
-              Договор
+            <button class="how-work__content-left-btn-2" >
+              Договор 
             </button>
 
           </div>
@@ -219,12 +219,12 @@
             источников, современные исследования подвергнуты целой серии независимых исследований.
           </div>
           <div class="how-work__content-left-btn-wrap">
-            <div class="how-work__content-left-btn-1">
+            <button class="how-work__content-left-btn-1" aria-label="Статья - Составляем смету, изучить подробнее">
               Подробнее
-            </div>
-            <div class="how-work__content-left-btn-2">
+            </button>
+            <button class="how-work__content-left-btn-2">
               Договор
-            </div>
+            </button>
 
           </div>
         </div>
@@ -248,12 +248,12 @@
             по разработке прогресса профессионального сообщества.
           </div>
           <div class="how-work__content-left-btn-wrap">
-            <div class="how-work__content-left-btn-1">
+            <button class="how-work__content-left-btn-1" aria-label="Статья - Привлекаем подрядчиков, изучить подробнее">
               Подробнее
-            </div>
-            <div class="how-work__content-left-btn-2">
+            </button>
+            <button class="how-work__content-left-btn-2">
               Договор
-            </div>
+            </button>
           </div>
         </div>
         <div class="how-work__content-right">
@@ -273,12 +273,12 @@
             возможностях системы массового участия. Принимая во внимание показатели успешности, постоянное
             информационно-пропагандистское обеспечение нашей деятельности позволяет. </div>
           <div class="how-work__content-left-btn-wrap">
-            <div class="how-work__content-left-btn-1">
+            <button class="how-work__content-left-btn-1" aria-label="Статья -  Инспектируем все этапы работ, изучить подробнее">
               Подробнее
-            </div>
-            <div class="how-work__content-left-btn-2">
+            </button>
+            <button class="how-work__content-left-btn-2">
               Договор
-            </div>
+            </button>
 
           </div>
         </div>
@@ -301,7 +301,7 @@
             <h3 class="often-question__item-heading label">
               Из чего формируется конечная стоимость проекта?
             </h3>
-            <button class="often-question__item-ellipse" id="accordion_1_btn">
+            <button class="often-question__item-ellipse" id="accordion_1_btn" aria-label="Раскрыть подробнее">
               <svg class="often-question__item-ellipse-pic" id="accordion_1_svg" viewBox="0 0 31 31" fill="none"
                 xmlns="http://www.w3.org/2000/svg">
                 <path fill-rule="evenodd" clip-rule="evenodd"
@@ -333,7 +333,7 @@
             <h3 class="often-question__item-heading label">
               У меня есть свой проект. Сможем ли мы его доработать / реализовать?
             </h3>
-            <button class="often-question__item-ellipse" id="accordion_2_btn">
+            <button class="often-question__item-ellipse" id="accordion_2_btn" aria-label="Раскрыть подробнее">
               <svg class="often-question__item-ellipse-pic" id="accordion_2_svg" viewBox="0 0 31 31" fill="none"
                 xmlns="http://www.w3.org/2000/svg">
                 <path fill-rule="evenodd" clip-rule="evenodd"
@@ -351,7 +351,7 @@
             <h3 class="often-question__item-heading label">
               Я выбираю между разными компаниями. В чём ваше отличие?
             </h3>
-            <button class="often-question__item-ellipse" id="accordion_3_btn">
+            <button class="often-question__item-ellipse" id="accordion_3_btn" aria-label="Раскрыть подробнее">
               <svg class="often-question__item-ellipse-pic" id="accordion_3_svg" viewBox="0 0 31 31" fill="none"
                 xmlns="http://www.w3.org/2000/svg">
                 <path fill-rule="evenodd" clip-rule="evenodd"
@@ -369,7 +369,7 @@
             <h3 class="often-question__item-heading">
               Могу ли я делегировать вам работу / согласование с подрядчиком / организацией?
             </h3>
-            <button class="often-question__item-ellipse" id="accordion_4_btn">
+            <button class="often-question__item-ellipse" id="accordion_4_btn" aria-label="Раскрыть подробнее">
               <svg class="often-question__item-ellipse-pic" id="accordion_4_svg" viewBox="0 0 31 31" fill="none"
                 xmlns="http://www.w3.org/2000/svg">
                 <path fill-rule="evenodd" clip-rule="evenodd"
@@ -387,7 +387,7 @@
             <h3 class="often-question__item-heading">
               Могу ли я вернуть деньги на каком-либо из этапов работ?
             </h3>
-            <button class="often-question__item-ellipse" id="accordion_5_btn">
+            <button class="often-question__item-ellipse" id="accordion_5_btn" aria-label="Раскрыть подробнее">
               <svg class="often-question__item-ellipse-pic" id="accordion_5_svg" viewBox="0 0 31 31" fill="none"
                 xmlns="http://www.w3.org/2000/svg">
                 <path fill-rule="evenodd" clip-rule="evenodd"
@@ -446,7 +446,7 @@
             </li>
           </ul>
           <div class="wrap-left__social">
-            <a href="#" class="social-ico-link">
+            <a href="#" class="social-ico-link" aria-label="Перейти на нашу страницу Фэйсбук">
               <svg class="wrap-left__social-ico" viewBox="0 0 60 60" fill="none" xmlns="http://www.w3.org/2000/svg">
 
                 <path
@@ -456,7 +456,7 @@
               </svg>
             </a>
 
-            <a href="#" class="social-ico-link">
+            <a href="#" class="social-ico-link" aria-label="Перейти на нашу страницу Вконтакте">
               <svg class="wrap-left__social-ico" viewBox="0 0 60 60" fill="none" xmlns="http://www.w3.org/2000/svg">
 
                 <path
@@ -466,7 +466,7 @@
               </svg>
             </a>
 
-            <a href="#" class="social-ico-link">
+            <a href="#" class="social-ico-link" aria-label="Перейти на нашу страницу Инстаграмм">
               <svg class="wrap-left__social-ico" viewBox="0 0 60 60" fill="none" xmlns="http://www.w3.org/2000/svg">
 
                 <path
@@ -490,9 +490,9 @@
           </h2>
           <form action="https://jsonplaceholder.typicode.com/posts" method="POST" class="wrap-center__form">
             <input class="wrap-center__form-input" placeholder="Фамилия, имя и отчество*" type="text" name="name"
-              required>
-            <input class="wrap-center__form-input" placeholder="E-mail*" type="text" name="email" required>
-            <textarea name="textarea" class="wrap-center__form-textarea" id="1" placeholder="Сообщение"></textarea>
+              required aria-label="Обязательное поле">
+            <input class="wrap-center__form-input" placeholder="E-mail*" type="text" name="email" required aria-label="Обязательное поле">
+            <textarea name="textarea" class="wrap-center__form-textarea" id="1" placeholder="Сообщение" aria-label="Напишите для нас сообщение в этом поле"></textarea>
             <div class="wrap-center__btn-wrap">
               <button class="wrap-center__form-btn">
                 Отправить данные
